Version 2.2.017
    Added a setting in advanced.yml to ignore attack cooldowns (see notes)
    Fixed a bug with Mace permissions (thanks SrBedrock)
    Updated zh_CN locale (thanks libook)
    Updated pt_BR locale (thanks JesusRuescas)
    Updated fr locale (thanks Ted-18)

    NOTES:
    Skills.General.Attack_Cooldown.Adjust_Skills_For_Attack_Cooldown is a new setting in advanced.yml that will allow you to ignore attack cooldowns for the combat skills.
    When a player spams an attack, have a reduced amount of bonus damage from mcMMO and reduced chance for chance-on-hit subskills to activate.
    You can have mcMMO ignore this value and apply full bonus damage and full chance to proc abilities by setting this to false.

Version 2.2.016
    (SQL) Fixed a bug where skill cooldowns were being loaded for players incorrectly

Version 2.2.015
    Added Maces skill
    Added Mace to repair.vanilla.yml (see notes)
    Fixed a bug where spamming attacks would still apply full bonus dmg and full chance to proc abilities (see notes)
    Fixed some misc missing permissions for crossbows/tridents

    NOTES:
    You shouldn't need to update repair.vanilla.yml, it should update automatically
    Maces is a new skill that is in early development, feedback is appreciated.
    Some ideas I had for the Maces are on hold as they are lacking proper API from Spigot.
    This is mostly pertaining to smash attacks, I had some ideas for enhancing them but without the proper API I will hold off for now.
    While working on Maces, I noticed a bug where spamming attacks would still apply full bonus damage and full chance to proc abilities, this has been fixed.
    When you swing your weapon in Minecraft, you gain an "Attack Strength" value, which is relative to your cooldown, mcMMO was supposed to be making use of this value, but at some point in the past this was broken.